--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,18 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>artifactory-snapshots</id>
+			<url>http://artifactory.openshift.nanonet/artifactory/libs-snapshot-local/</url>
+		</repository>
 	</repositories>
+
+	<pluginRepositories>
+        <pluginRepository>
+			<id>jcenter</id>
+			<url>http://jcenter.bintray.com</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<dependencyManagement>
 		<dependencies>
@@ -619,6 +630,29 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+	            <groupId>org.jfrog.buildinfo</groupId>
+	            <artifactId>artifactory-maven-plugin</artifactId>
+	            <version>2.4.1</version>
+	            <inherited>false</inherited>
+	            <executions>
+	                <execution>
+	                    <id>build-info</id>
+	                    <goals>
+	                        <goal>publish</goal>
+	                    </goals>
+	                    <configuration>
+	                        <publisher>
+	                            <contextUrl>http://artifactory.openshift.nanonet/artifactory</contextUrl>
+	                            <username>${artifactory.user}</username>
+	                            <password>${artifactory.password}</password>
+	                            <repoKey>libs-release-local</repoKey>
+	                            <snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
+	                        </publisher>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>		
 		</plugins>
 
 		<pluginManagement>
