--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "dcs-web-ui",
-  "version": "0.1.0",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
@@ -10,7 +8,37 @@
     "typings": "typings"
   },
   "license": "ISC",
+  "dependencies": {
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.1",
+    "@angular/upgrade": "2.0.0-rc.4",
+    "ng2-bootstrap": "1.0.20",
+    "bootstrap": "4.0.0-alpha.2",
+    "font-awesome": "4.6.3",
+    "html5-boilerplate": "5.2.0",
+    "d3": "3.5.17",
+    "reflect-metadata": "0.1.3",
+    "systemjs": "0.19.31",
+    "todomvc-common": "1.0.2",
+    "es6-promise": "3.1.2",
+    "es6-shim": "0.35.1",
+    "zone.js": "0.6.12",
+    "core-js": "2.4.0",
+    "angular2-in-memory-web-api": "0.0.14",
+    "moment": "2.14.1",
+    "typescript": "2.0.0-dev.20160707",
+    "tslint-eslint-rules": "1.2.0",
+    "codelyzer": "0.0.19"
+  },
   "devDependencies": {
-    "typings":"^1.0.4"
+    "jasmine-core": "2.4.1",
+    "types__jasmine": "2.2.26-alpha",
+    "typings": "^1.0.4"
   }
 }
