--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "4.6.3",
     "d3": "3.5.17",
     "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.31",
     "todomvc-common": "1.0.2",
     "es6-promise": "3.1.2",
