Add global api endpoint extension (json / xml) recognition

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -125,8 +125,9 @@ play.http {
   # common logic for all your actions, e.g. adding common headers.
   # Defaults to "Filters" in the root package (aka "apps" folder)
   # Alternatively you can explicitly register a class here.
-  #filters = my.application.Filters
+  # filters = global.Filters
 
+  requestHandler = "global.RequestHandler"
   ## Session & Flash
   # https://www.playframework.com/documentation/latest/JavaSessionFlash
   # https://www.playframework.com/documentation/latest/ScalaSessionFlash
