--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "4.0.0-alpha.2",
     "font-awesome": "4.6.3",
     "d3": "3.5.17",
+    "webcola": "3.1.3",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.31",
