--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "scripts": {
-    "start": "tsc -p ./test && concurrently \"npm run tsc:w -- -p ./test\" \"npm run lite\" ",
+    "start": "concurrently \"sbt ~test:compile\" \"npm run lite-server-test\" ",
     "lite": "lite-server",
-    "pretest": "rm -rf ./test/dist && npm run tsc -- -p ./test",
+    "pretest": "sbt test:compile",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings",
     "lite-server-test": "lite-server --config=./test/liteserver-test-config.json",
     "test": "karma start karma.conf.js",
-    "posttest": "node_modules/.bin/remap-istanbul -i test/coverage/coverage-final.json -o test/coverage -t html",
-    "coverage": "http-server -c-1 -o -p 9875 ./test/coverage"
+    "posttest": "node_modules/.bin/remap-istanbul -i target/karma/coverage/coverage-final.json -o target/karma/coverage -t html",
+    "coverage": "http-server -c-1 -o -p 9875 ./target/karma/coverage"
   },
   "license": "ISC",
   "dependencies": {
