--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "concurrently \"sbt ~test:compile\" \"npm run lite-server-test\" ",
+    "start": "concurrently \"sbt ~test:compile\" \"karma start karma.conf.js -- --singleRun false\" ",
     "lite": "lite-server",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
@@ -31,6 +31,7 @@
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.31",
+    "traceur": "0.0.111",
     "todomvc-common": "1.0.2",
     "es6-promise": "3.1.2",
     "es6-shim": "0.35.1",
