--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.1",
-    "@angular/upgrade": "2.0.0-rc.4",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.5",
     "ng2-bootstrap": "1.0.20",
     "moment": "2.13.0",
     "bootstrap": "4.0.0-alpha.2",
@@ -34,6 +34,8 @@
     "es6-shim": "0.35.1",
     "zone.js": "0.6.12",
     "core-js": "2.4.0",
+    "primeui": "^4.1.15",
+    "primeng": "^1.0.0-beta.13",
     "angular2-in-memory-web-api": "0.0.14",
     "tslint-eslint-rules": "1.2.0",
     "codelyzer": "0.0.19"
