--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.5",
-    "ng2-bootstrap": "1.0.20",
+    "ng2-bootstrap": "1.0.24",
+    "ng2-select": "1.0.3",
     "moment": "2.13.0",
     "bootstrap": "4.0.0-alpha.2",
     "font-awesome": "4.6.3",
