--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "es6-shim": "0.35.1",
     "zone.js": "0.6.12",
     "core-js": "2.4.0",
-    "primeui": "^4.1.15",
-    "primeng": "^1.0.0-beta.13",
+    "primeui": "4.1.15",
+    "primeng": "1.0.0-beta.13",
     "angular2-in-memory-web-api": "0.0.14",
     "tslint-eslint-rules": "1.2.0",
     "codelyzer": "0.0.19"
