Integrate keycloak for webapp and api

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -117,15 +117,15 @@ play.http {
   # If null, will attempt to load a class called ErrorHandler in the root package,
   errorHandler = "controllers.ErrorHandler"
 
-  ## Filters
+  ## global.Filters
   # https://www.playframework.com/documentation/latest/ScalaHttpFilters
   # https://www.playframework.com/documentation/latest/JavaHttpFilters
   # ~~~~~
-  # Filters run code on every request. They can be used to perform
+  # global.Filters run code on every request. They can be used to perform
   # common logic for all your actions, e.g. adding common headers.
-  # Defaults to "Filters" in the root package (aka "apps" folder)
+  # Defaults to "global.Filters" in the root package (aka "apps" folder)
   # Alternatively you can explicitly register a class here.
-  # filters = global.Filters
+  filters = "global.Filters"
 
   requestHandler = "global.RequestHandler"
   ## Session & Flash
@@ -216,7 +216,7 @@ play.cache {
   #bindCaches = ["db-cache", "user-cache", "session-cache"]
 }
 
-## Filters
+## global.Filters
 # https://www.playframework.com/documentation/latest/Filters
 # ~~~~~
 # There are a number of built-in filters that can be enabled and configured
