--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "2.13.0",
     "bootstrap": "4.0.0-alpha.2",
     "font-awesome": "4.6.3",
+    "keycloak-js": "2.2.1",
     "d3": "3.5.17",
     "webcola": "3.1.3",
     "reflect-metadata": "0.1.3",
