--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "sbt-test-run": "concurrently \"sbt ~test:compile\" \"karma start karma.conf.js -- --singleRun false\" ",
+    "sbt-test-run": "QT_QPA_PLATFORM='' concurrently \"sbt ~test:compile\" \"karma start karma.conf.js -- --singleRun false\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings",
-    "test": "karma start karma.conf.js",
-    "sbt-test": "sbt test:compile && karma start karma.conf.js",
+    "test": "QT_QPA_PLATFORM='' karma start karma.conf.js",
+    "sbt-test": "sbt test:compile && QT_QPA_PLATFORM='' karma start karma.conf.js",
     "posttest": "node_modules/.bin/remap-istanbul -i target/karma/coverage/coverage-final.json -o target/karma/coverage -t html",
     "coverage": "http-server -c-1 -o -p 9875 ./target/karma/coverage"
   },
@@ -26,8 +26,7 @@
     "bootstrap": "4.0.0-alpha.2",
     "font-awesome": "4.6.3",
     "keycloak-js": "2.2.1",
-    "d3": "3.5.17",
-    "webcola": "3.1.3",
+    "vis": "4.16.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.31",
@@ -47,11 +46,11 @@
     "jasmine-core": "2.4.1",
     "typescript": "2.0.0-dev.20160707",
     "typings": "^1.0.4",
-    "karma": "0.13.19",
+    "karma": "0.13.22",
     "karma-chrome-launcher": "0.2.2",
     "karma-coverage": "0.5.3",
     "karma-jasmine": "0.3.6",
-    "phantomjs-prebuilt": "2.1.7",
+    "phantomjs-prebuilt": "2.1.13",
     "karma-phantomjs-launcher": "1.0.1",
     "karma-mocha-reporter": "2.0.4",
     "karma-junit-reporter": "1.1.0",
