--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "4.6.3",
     "keycloak-js": "2.2.1",
     "vis": "4.16.1",
+    "leaflet": "1.0.2",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.31",
