--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "keycloak-js": "2.2.1",
     "vis": "4.16.1",
     "leaflet": "1.0.2",
+    "plotly.js": "1.20.5",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.31",
