--- a/package.json
+++ b/package.json
@@ -44,18 +44,21 @@
     "codelyzer": "0.0.19"
   },
   "devDependencies": {
+    "@types/jasmine": "^2.5.41",
+    "@types/leaflet": "^1.0.50",
+    "@types/node": "^7.0.4",
     "concurrently": "^2.0.0",
     "jasmine-core": "2.4.1",
-    "typescript": "2.1.5",
-    "typings": "^1.0.4",
     "karma": "0.13.22",
     "karma-chrome-launcher": "0.2.2",
     "karma-coverage": "0.5.3",
     "karma-jasmine": "0.3.6",
-    "phantomjs-prebuilt": "2.1.13",
-    "karma-phantomjs-launcher": "1.0.1",
-    "karma-mocha-reporter": "2.0.4",
     "karma-junit-reporter": "1.1.0",
-    "remap-istanbul": "0.6.4"
+    "karma-mocha-reporter": "2.0.4",
+    "karma-phantomjs-launcher": "1.0.1",
+    "phantomjs-prebuilt": "2.1.13",
+    "remap-istanbul": "0.6.4",
+    "typescript": "2.1.5",
+    "typings": "^1.0.4"
   }
 }
