--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "leaflet": "1.0.2",
     "moment": "2.13.0",
     "plotly.js": "1.20.5",
-    "primeng": "^4.0.0-rc.4",
+    "primeng": "^4.0.0",
     "primeui": "^4.1.15",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
