--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "es6-promise": "3.1.2",
     "es6-shim": "0.35.1",
     "font-awesome": "4.7",
+    "immutable": "^3.8.1",
     "keycloak-js": "2.4.0",
     "leaflet": "1.0.2",
     "moment": "2.13.0",
