--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
     "@angular/router": "4.0.2",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.2",
     "angular-in-memory-web-api": "^0.3.1",
     "angular-split": "^0.2.0",
     "bootstrap": "4.0.0-alpha.2",
@@ -28,7 +30,6 @@
     "es6-promise": "3.1.2",
     "es6-shim": "0.35.1",
     "font-awesome": "4.7",
-    "immutable": "^3.8.1",
     "keycloak-js": "2.4.0",
     "leaflet": "1.0.2",
     "moment": "2.13.0",
@@ -37,6 +38,7 @@
     "primeui": "^4.1.15",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
+    "seamless-immutable": "^7.1.2",
     "systemjs": "0.19.40",
     "todomvc-common": "1.0.2",
     "traceur": "0.0.111",
@@ -48,6 +50,7 @@
     "@types/jasmine": "^2.5.41",
     "@types/leaflet": "^1.0.50",
     "@types/node": "^7.0.4",
+    "@types/seamless-immutable": "^6.1.2",
     "concurrently": "^2.0.0",
     "jasmine-core": "2.4.1",
     "karma": "^1.3.0",
@@ -59,8 +62,8 @@
     "karma-phantomjs-launcher": "1.0.4",
     "phantomjs-prebuilt": "2.1.14",
     "remap-istanbul": "0.6.4",
+    "tslint": "^3.15.1",
     "typescript": "~2.1.0",
-    "typings": "^1.0.4",
-    "tslint": "^3.15.1"
+    "typings": "^1.0.4"
   }
 }
