Use custom typings for seamless-immutable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "noFallthroughCasesInSwitch":true,
     "noImplicitReturns":true,
     "lib": ["es6", "dom"],
-    "outDir": "./target/typescript/main/javascripts"
+    "outDir": "./target/typescript/main/javascripts",
+    "typeRoots" : ["node_modules/@types", "typings"]
   },
   "exclude": [
     "node_modules",
