--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "4.0.2",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.2",
+    "@types/lodash": "^4.14.76",
     "angular-in-memory-web-api": "^0.3.1",
     "angular-split": "^0.2.0",
     "bootstrap": "4.0.0-alpha.2",
@@ -50,6 +51,7 @@
     "@types/leaflet": "^1.0.50",
     "@types/node": "^7.0.4",
     "@types/seamless-immutable": "^6.1.2",
+    "@types/lodash": "3.10.10",
     "concurrently": "^2.0.0",
     "jasmine-core": "2.4.1",
     "karma": "^1.3.0",
