--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "leaflet": "1.0.2",
     "moment": "2.13.0",
     "plotly.js": "1.20.5",
-    "primeng": "^4.1.3",
+    "primeng": "4.3.0",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.1",
+    "rxjs": "5.4.0",
     "seamless-immutable": "^7.1.2",
     "systemjs": "0.19.40",
     "todomvc-common": "1.0.2",
