--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ pipeline:
     image: bigtruedata/sbt:0.13.15-2.11.8
     commands:
       - mkdir -p ~/.sbt/0.13
-      - cp global.sbt ~/.sbt/0.13
+      - cp .global.sbt ~/.sbt/0.13/global.sbt
       - sbt -Dsbt.ivy.home=./.ivy2 publish
     secrets: [ artifactory_host, artifactory_url, artifactory_username, artifactory_password ]
     when:
